--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
